--- a/Web/src/app/app.component.html
+++ b/Web/src/app/app.component.html
@@ -17,5 +17,4 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
-<button (click)="add()">Add Point!</button>
-    <div [chart]="chart"></div>
+<asset-history-chart></asset-history-chart>
