Recommendation distribution chart

--- a/Web/src/app/app.component.html
+++ b/Web/src/app/app.component.html
@@ -18,3 +18,4 @@
   </li>
 </ul>
 <asset-history-chart></asset-history-chart>
+<recommendation-distribution [data]="data"></recommendation-distribution>
