--- a/Web/src/app/components/asset/asset-history-chart/asset-history-chart.component.html
+++ b/Web/src/app/components/asset/asset-history-chart/asset-history-chart.component.html
@@ -1,2 +1,4 @@
 <button (click)="addData()">Add!</button>
 <div class="asset-chart" [chart]="assetChart"></div>
+
+<div class="pie-chart" [chart]="pieChart"></div>
