--- a/Web/src/app/app.component.html
+++ b/Web/src/app/app.component.html
@@ -1,4 +1,5 @@
+<message-signature></message-signature>
 <router-outlet></router-outlet>
-<asset-history-chart [assetValues]="assetValues" [advices]="advices"></asset-history-chart>
+<!-- <asset-history-chart [assetValues]="assetValues" [advices]="advices"></asset-history-chart>
 <recommendation-distribution [data]="data"></recommendation-distribution>
-<advisor-card [advisor]="advisor"></advisor-card>
+<advisor-card [advisor]="advisor"></advisor-card> -->
