Resend confirmation email

--- a/Web/src/app/components/account/confirm-email/confirm-email.component.html
+++ b/Web/src/app/components/account/confirm-email/confirm-email.component.html
@@ -1,4 +1,4 @@
 <p>
 An email was sent to {{loggedUserEmail}}. 
 </p>
-<button (click)="resendConfirmationEmail()"></button>
+<button (click)="resendEmailConfirmation()"></button>
