--- a/Web/src/app/app.component.html
+++ b/Web/src/app/app.component.html
@@ -1,5 +1,2 @@
-<message-signature></message-signature>
+<simple-notifications [options]="notificationOptions"></simple-notifications>
 <router-outlet></router-outlet>
-<!-- <asset-history-chart [assetValues]="assetValues" [advices]="advices"></asset-history-chart>
-<recommendation-distribution [data]="data"></recommendation-distribution>
-<advisor-card [advisor]="advisor"></advisor-card> -->
