--- a/Web/src/app/components/account/login/login.component.html
+++ b/Web/src/app/components/account/login/login.component.html
@@ -18,7 +18,7 @@
             </button>
           </div>
           <div fxLayout="row" fxLayoutGap="20px">
-            <a routerLink="/forgot-password-email" class="element-margin-top">Forgot my password</a>
+            <a routerLink="/forgot-password" class="element-margin-top">Forgot my password</a>
           </div>
           <div fxLayout="row" fxLayoutGap="20px">
             <a routerLink="/home" class="element-margin-top">Don't have an account?</a>
