--- a/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
+++ b/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
@@ -1,25 +1,24 @@
 <div>
-  {{advisor.name}}
+  Name: {{advisor.name}}
 </div>
 <div>
-  {{advisor.description}}
+  Description: {{advisor.description}}
 </div>
 <div>
-  {{advisor.advisorDetails.successRate}}
+  Success Rate: {{advisor.successRate}}
 </div>
 <div>
-  {{advisor.advisorDetails.averageReturn}}
+  Average Return: {{advisor.averageReturn}}
 </div>
 <div>
-  {{advisor.advisorDetails.ranking}}
+  Ranking: {{advisor.ranking}}
 </div>
 <div>
-  {{advisor.advisorDetails.numberOfFollowers}}
+  Number Of Followers: {{advisor.numberOfFollowers}}
 </div>
 <div>
-  {{advisor.advisorDetails.following}}
+  Following: {{advisor.following}}
 </div>
 <div>
-  {{advisor.advisorDetails.rating}}
+  Rating: {{advisor.rating}}
 </div>
-<img [src]="advisor.urlPhoto"/>
