--- a/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
+++ b/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
@@ -1,4 +1,7 @@
 <div>
+  <a routerLink="/advisor-details/{{advisor.userId}}">View profile</a>
+</div>
+<div>
   Name: {{advisor.name}}
 </div>
 <div>
