--- a/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
+++ b/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
@@ -2,6 +2,9 @@
   <a routerLink="/advisor-details/{{advisor.userId}}">View profile</a>
 </div>
 <div>
+    <img [src]="getAdvisorImgUrl(asset)">
+  </div>
+<div>
   Name: {{advisor.name}}
 </div>
 <div>
@@ -24,4 +27,10 @@
 </div>
 <div>
   Rating: {{advisor.rating}}
+</div>
+<div *ngIf="advisor.following">
+    <button (click)="onUnfollowClick()">UNFOLLOW</button>
+</div>
+<div *ngIf="!advisor.following">
+  <button (click)="onFollowClick()">FOLLOW</button>
 </div>
