--- a/Web/src/app/components/asset/asset-card/asset-card.component.html
+++ b/Web/src/app/components/asset/asset-card/asset-card.component.html
@@ -2,7 +2,7 @@
   asset-card works!
 </p>
 <div>
-    <img [src]="getAssetImgUrl(asset)">
+    <img [src]="getAssetImgUrl()">
   </div>
 <div>
   Name: {{asset.name}}
