--- a/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
+++ b/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
@@ -2,7 +2,7 @@
   <a routerLink="/advisor-details/{{advisor.userId}}">View profile</a>
 </div>
 <div>
-    <img [src]="getAdvisorImgUrl(asset)">
+    <img [src]="getAdvisorImgUrl()">
   </div>
 <div>
   Name: {{advisor.name}}
