--- a/Web/src/app/components/advisor/list-advisors/list-advisors.component.html
+++ b/Web/src/app/components/advisor/list-advisors/list-advisors.component.html
@@ -2,7 +2,7 @@
   list-advisors works!
 </p>
 <select  class='form-control' 
-        (change)="onSortOptionChanged($event)" [(ngModel)]="selectedSortOption">
+        (change)="onSortOptionChanged()" [(ngModel)]="selectedSortOption">
         <option *ngFor="let sortOption of sortOptions" [value]="sortOption.value">{{sortOption.name}}</option>
 </select>
 <div *ngFor="let advisor of advisors">
