--- a/Web/src/app/components/account/register/register.component.html
+++ b/Web/src/app/components/account/register/register.component.html
@@ -11,7 +11,10 @@
             autocomplete="current-password" />
         </div>
         <div fxLayout="row" fxLayoutGap="20px">
-          <input matInput [(ngModel)]="registerRequest.requestedToBeAdvisor" type="checkbox" formControlName="password"/>
+          <input matInput [(ngModel)]="registerRequest.referralCode" type="text" formControlName="referralCode"/>
+        </div>
+        <div fxLayout="row" fxLayoutGap="20px">
+          <input mat-checkbox [(ngModel)]="registerRequest.requestedToBeAdvisor" type="checkbox" formControlName="requestedToBeAdvisor"/>
         </div>
         <div fxLayout="row" fxLayoutGap="20px">
           <button type="submit" class="primary-button bold login">
