--- a/Web/src/app/app.component.html
+++ b/Web/src/app/app.component.html
@@ -1,2 +1,3 @@
 <simple-notifications [options]="notificationOptions"></simple-notifications>
 <router-outlet></router-outlet>
+<global-search></global-search>
