--- a/Web/src/app/components/admin/dashboard/dashboard.component.html
+++ b/Web/src/app/components/admin/dashboard/dashboard.component.html
@@ -51,7 +51,7 @@
         <div fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="70px" fxLayoutGap.xs="20px" fxLayoutGap.sm="35px">
             <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
                 <span class="smallNumber bold">{{dashboardData.totalWalletsInProgress}}</span>
-                <span class="smallText totalText">WALLETS IN PROGRESS<br/>WITH AUC</span>
+                <span class="smallText totalText">WALLETS WITH AUC<br/>IN PROGRESS</span>
             </div>
             <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
                 <span class="smallNumber bold">{{dashboardData.aucHoldedInProgress}}</span>
