--- a/Web/src/app/app.component.html
+++ b/Web/src/app/app.component.html
@@ -1,3 +1,6 @@
+<ng-http-loader 
+    [entryComponent]="topLoading">
+</ng-http-loader>
 <simple-notifications [options]="notificationOptions"></simple-notifications>
 <router-outlet></router-outlet>
 <global-search></global-search>
