--- a/Web/src/app/components/search/global-search/global-search.component.html
+++ b/Web/src/app/components/search/global-search/global-search.component.html
@@ -1,13 +1,15 @@
-<input type="text" matInput (input)="onInputChanged($event.target.value)" [matAutocomplete]="auto">
-<mat-autocomplete #auto="matAutocomplete">
-  <mat-optgroup label="Assets">
-    <mat-option *ngFor="let asset of assetResults" [value]="asset">
-      {{asset.name}}
-    </mat-option>
-  </mat-optgroup>
-  <mat-optgroup label="Experts">
-    <mat-option *ngFor="let expert of expertResults" [value]="expert">
-      {{expert.name}}
-    </mat-option>
-  </mat-optgroup>
-</mat-autocomplete>
+<mat-form-field>
+  <input type="text" matInput [(ngModel)]="inputText" placeholder="Search" (input)="onInputChanged($event.target.value)" [matAutocomplete]="auto">
+  <mat-autocomplete #auto="matAutocomplete" (optionSelected)="onSelectionChanged($event)">
+    <mat-optgroup label="Assets">
+      <mat-option *ngFor="let asset of searchResults.assets" [value]="asset">
+        {{asset.name}}
+      </mat-option>
+    </mat-optgroup>
+    <mat-optgroup label="Experts">
+      <mat-option *ngFor="let expert of searchResults.advisors" [value]="expert">
+        {{expert.name}}
+      </mat-option>
+    </mat-optgroup>
+  </mat-autocomplete>
+</mat-form-field>
