--- a/Web/src/app/components/account/message-signature/message-signature.component.html
+++ b/Web/src/app/components/account/message-signature/message-signature.component.html
@@ -2,7 +2,7 @@
   <button (click)="signMessage()">SIGN MESSAGE</button>
 </div>
 <div *ngIf="!hasMetamask">
-  Please install metamask
+  Please install metamask and unlock your account
 </div>
 
 <button (click)="becomeAdvisor()">BECOME ADVISOR</button>
