--- a/Web/src/app/components/account/login/login.component.html
+++ b/Web/src/app/components/account/login/login.component.html
@@ -21,7 +21,7 @@
             <a routerLink="/forgot-password" class="element-margin-top">Forgot my password</a>
           </div>
           <div fxLayout="row" fxLayoutGap="20px">
-            <a routerLink="/home" class="element-margin-top">Don't have an account?</a>
+            <a routerLink="/register" class="element-margin-top">Don't have an account?</a>
           </div>
         </div>
       </div>
