backend of recommendation box for home page (not logged)

--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
@@ -1,3 +1,17 @@
-<p>
-  recommendation-box works!
-</p>
+<div class="container" fxLayout="column" fxLayoutAlign="center">
+  <div fxLayout="column">
+    <h2 class="bold" fxFlex fxLayoutAlign="center center">Expert Recommendations</h2>
+    <h5 class="bold" fxFlex fxLayoutAlign="center center">Lorem ipsun recommendations Auctus lorem ipsun</h5>
+  </div>
+  <div fxLayout="row" fxLayoutGap="5%" fxLayoutAlign="center center">
+    <div fxFlex="25%" fxLayoutAlign="center center">
+      <p>Teste 1</p>
+    </div>
+    <div fxFlex="25%" fxLayoutAlign="center center">
+      <p>Teste 2</p>
+    </div>
+    <div fxFlex="25%" fxLayoutAlign="center center">
+      <p>Teste 3</p>
+    </div>
+  </div>
+</div>
