--- a/Web/src/app/components/account/login/login.component.html
+++ b/Web/src/app/components/account/login/login.component.html
@@ -4,10 +4,8 @@
       <div class="blue-box" fxLayout="column" fxLayoutGap="20px">
         <div fxLayout="column" fxLayoutAlign="space-evenly center">
           <div fxLayout="row" fxLayoutGap="20px">
-            
               <input matInput placeholder="Email" [(ngModel)]="loginRequest.email" formControlName="email" type="text"
                 autocomplete="username email" />
-            
           </div>
           <div fxLayout="row" fxLayoutGap="20px">
               <input matInput placeholder="Password" [(ngModel)]="loginRequest.password" type="password" formControlName="password" autocomplete="current-password"/>
@@ -26,4 +24,7 @@
         </div>
       </div>
     </form>
+    
+<button (click)="socialSignIn('facebook')">Sign in with Facebook</button>
+<button (click)="socialSignIn('google')">Signin in with Google</button> 
   </div>
