--- a/Web/src/app/components/advisor/advisor-edit/advisor-edit.component.html
+++ b/Web/src/app/components/advisor/advisor-edit/advisor-edit.component.html
@@ -11,7 +11,7 @@
     </mat-form-field>
     <div class="file-container"> 
         <div class="file-uploader">
-            <file-uploader #FileUploadComponent [emptyPictureUrl]="emptyUserUrl"></file-uploader>
+            <file-uploader #FileUploadComponent [pictureUrl]="pictureUrl"></file-uploader>
         </div>
     </div>
     <div fxLayout="row" fxLayoutGap="10px" class="actions">
