--- a/Web/src/app/components/account/login/login.component.html
+++ b/Web/src/app/components/account/login/login.component.html
@@ -11,6 +11,9 @@
               <input matInput placeholder="Password" [(ngModel)]="loginRequest.password" type="password" formControlName="password" autocomplete="current-password"/>
           </div>
           <div fxLayout="row" fxLayoutGap="20px">
+              <recaptcha #RecaptchaComponent (onCaptchaResponse)="onCaptchaResponse($event)"></recaptcha>
+          </div>
+          <div fxLayout="row" fxLayoutGap="20px">
             <button type="submit" class="primary-button bold login" >
               LOGIN
             </button>
