--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
@@ -1,17 +1,24 @@
-<div class="container" fxLayout="column" fxLayoutAlign="center">
-  <div fxLayout="column">
-    <h2 class="bold" fxFlex fxLayoutAlign="center center">Expert Recommendations</h2>
-    <h5 class="bold" fxFlex fxLayoutAlign="center center">Lorem ipsun recommendations Auctus lorem ipsun</h5>
+<div class="recommendation-box-container">
+  <div class="section-title">
+    Expert Recommendations
   </div>
-  <div fxLayout="row" fxLayoutGap="5%" fxLayoutAlign="center center">
-    <div fxFlex="25%" fxLayoutAlign="center center">
-      <p>Teste 1</p>
+  <div class="section-subtitle">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  </div>
+  <div class="recommendation-list" fxLayout="row">
+    <div class="recommendation-box">
+      <h3>BUY</h3>
     </div>
-    <div fxFlex="25%" fxLayoutAlign="center center">
-      <p>Teste 2</p>
+    <div class="recommendation-box">
+      <h3>SELL</h3>
     </div>
-    <div fxFlex="25%" fxLayoutAlign="center center">
-      <p>Teste 3</p>
+    <div class="recommendation-box">
+      <h3>CLOSE POSITION</h3>
+    </div>
+  </div>
+  <div>
+    <div class="access-button" (click)="accessRecommendations()">
+      ACCESS
     </div>
   </div>
 </div>
