--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
@@ -6,14 +6,17 @@
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   </div>
   <div class="recommendation-list" fxLayout="row">
-    <div class="recommendation-box">
+    <div class="recommendation-box" fxLayout="column">
       <h3>BUY</h3>
+      <advice-card *ngFor="let advice of buyAdvices" class="advice-card" [advice]="advice"></advice-card>
     </div>
-    <div class="recommendation-box">
+    <div class="recommendation-box" fxLayout="column">
       <h3>SELL</h3>
+      <advice-card *ngFor="let advice of sellAdvices" class="advice-card" [advice]="advice"></advice-card>
     </div>
-    <div class="recommendation-box">
+    <div class="recommendation-box" fxLayout="column">
       <h3>CLOSE POSITION</h3>
+      <advice-card *ngFor="let advice of closePositionAdvices" class="advice-card" [advice]="advice"></advice-card>
     </div>
   </div>
   <div>
