--- a/Web/src/app/components/account/forgot-password/forgot-password.component.html
+++ b/Web/src/app/components/account/forgot-password/forgot-password.component.html
@@ -1,5 +1,12 @@
-<p>
-  forgot-password works!
-</p>
-<input [(ngModel)]="forgotPasswordRequest.email" placeholder="Email">
-<button (click)="send()">SEND</button>
+<div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
+  <p>Please fill your email used to register on the platform.</p>
+</div>
+<form [formGroup]="forgotPasswordForm" (ngSubmit)="send()" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
+  <mat-form-field ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web">
+    <input cdkFocusInitial matInput maxlength="50" required placeholder="Email" [(ngModel)]="forgotPasswordRequest.email" formControlName="email" type="text" autocomplete="email" />
+  </mat-form-field>
+</form>
+<div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
+  <recaptcha #RecaptchaComponent (onCaptchaResponse)="onCaptchaResponse($event)"></recaptcha>
+  <button class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="send()" [promiseBtn]="promise">Send</button>
+</div>
