--- a/Web/src/app/components/account/login/login.component.html
+++ b/Web/src/app/components/account/login/login.component.html
@@ -1,16 +1,16 @@
 <form [formGroup]="loginForm" (ngSubmit)="onLoginClick()" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
-  <mat-form-field ngClass.xs="mobile" ngClass.sm="tablet" ngClass.gt-sm="web">
-    <input cdkFocusInitial matInput required placeholder="Email" [(ngModel)]="loginRequest.email" formControlName="email" type="text" autocomplete="username email" />
+  <mat-form-field ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web">
+    <input cdkFocusInitial matInput maxlength="50" required placeholder="Email" [(ngModel)]="loginRequest.email" formControlName="email" type="text" autocomplete="username email" />
   </mat-form-field>
-  <mat-form-field ngClass.xs="mobile" ngClass.sm="tablet" ngClass.gt-sm="web">
+  <mat-form-field ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web">
     <input matInput required placeholder="Password" [(ngModel)]="loginRequest.password" type="password" formControlName="password" autocomplete="current-password"/>
   </mat-form-field>
 </form>
 <div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
   <recaptcha #RecaptchaComponent (onCaptchaResponse)="onCaptchaResponse($event)"></recaptcha>
+  <button class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="onLoginClick()" [promiseBtn]="promise">Sign In</button>
+  <a class="modal-link" (click)="onForgotPasswordClick()">Forgot my password</a>
+  <a class="modal-link" (click)="onRegisterClick()">Don't have an account?</a>
   <button mat-flat-button (click)="socialSignIn('facebook')">Sign in with Facebook</button>
   <button mat-flat-button (click)="socialSignIn('google')">Signin in with Google</button> 
-  <a routerLink="/forgot-password">Forgot my password</a>
-  <a routerLink="/register">Don't have an account?</a>
-  <button class="btn-login" ngClass.xs="btn-mobile" ngClass.sm="btn-tablet" ngClass.gt-sm="btn-web" mat-flat-button (click)="onLoginClick()" [promiseBtn]="promise">Access</button>
 </div>
