--- a/Web/src/app/components/home/home/home.component.html
+++ b/Web/src/app/components/home/home/home.component.html
@@ -1,3 +1,3 @@
 <button mat-button (click)="onLogin()" class="primary">Login</button>
-<recommendation-box></recommendation-box>
+<recommendation-box-list></recommendation-box-list>
 <top-advisors></top-advisors>
