layout fix for small resolution (mobile)

--- a/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
+++ b/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
@@ -5,7 +5,7 @@
   <div class="section-subtitle">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   </div>
-  <div class="recommendation-list" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center top">
+  <div class="recommendation-list" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center top" fxLayoutAlign.xs="center center">
     <recommendation-box [adviceType]="'BUY'" [adviceList]="buyAdvices"></recommendation-box>
     <recommendation-box [adviceType]="'SELL'" [adviceList]="sellAdvices"></recommendation-box>
     <recommendation-box [adviceType]="'CLOSE POSITION'" [adviceList]="closePositionAdvices"></recommendation-box>
