--- a/Web/src/app/components/home/home/home.component.html
+++ b/Web/src/app/components/home/home/home.component.html
@@ -1,3 +1,4 @@
 <button mat-button (click)="onLogin()" class="primary">Login</button>
 <recommendation-box></recommendation-box>
 <top-advisors></top-advisors>
+<trending-assets></trending-assets>
